# lore

./: .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  README.md  pyproject.toml
.claude/skills/release/: SKILL.md  release_helper.py
.github/workflows/: build-wheel.yml  lint.yml  test.yml
src/lore/: capture.py  cli.py
src/lore/config/: __init__.py  loaders.py  manager.py  models.py  utils.py
src/lore/git/: __init__.py  base.py  github.py
src/lore/llm/: __init__.py  base.py  none.py  ollama.py
src/lore/mcp/: server.py
src/lore/mcp/skills/: LORE.md
src/lore/store/: __init__.py  base.py  priority.py  sqlite.py
src/lore/sync/: __init__.py  engine.py  git.py  lock.py  log.py  parser.py  state.py
tests/: conftest.py
tests/unit/: test_capture.py  test_cli.py  test_config_loaders.py  test_config_manager.py  test_config_utils.py  test_git_interface.py  test_llm_base.py  test_llm_init.py  test_llm_none.py  test_llm_ollama.py  test_mcp_server.py  test_mcp_tools.py  test_store_sqlite.py  test_sync_engine.py  test_sync_git.py  test_sync_lock.py  test_sync_parser.py  test_sync_staleness.py  test_sync_state.py
