[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lore-mcp"
version = "0.1.0"
description = "Shared knowledge MCP server for AI coding agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lore = "lore.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
