[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lore-mcp"
version = "0.1.0"
description = "Shared knowledge MCP server for AI coding agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
]

[project.scripts]
lore = "lore.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=26,<27",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
